--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,23 @@
 
     <modules>
         <module>Lesson1_Servlet_API</module>
+        <module>Lesson2_Spring-basics</module>
     </modules>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>5.3.22</spring.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
